Fixing and expanding README-File.

--- a/README
+++ b/README
@@ -1,2 +1,4 @@
-This project is an example for use with a tutorial video describing
+This project is a simple example for use with a tutorial video describing
 to use git and GithHub.
+
+Hopefully, it will grow into something wonderful over time!
